# lvr2

./: .gitignore  CMakeLists.txt  package.xml
.github/workflows/: cmake-multi-platform-build.yml  ros-humble.yml  ros-iron.yml  ros-jazzy.yml
include/lvr2/algorithm/: GeometryAlgorithms.hpp  GeometryAlgorithms.tcc
include/lvr2/algorithm/raycasting/: BVHRaycaster.tcc
include/lvr2/geometry/: BVH.hpp  BVH.tcc
include/lvr2/reconstruction/: SearchTreeFlann.hpp  SearchTreeFlann.tcc
rust_lvr2/: Cargo.toml  README.md
rust_lvr2/src/: lib.rs
rust_lvr2/src/algorithm/: mod.rs  simplify.rs  smooth.rs
rust_lvr2/src/geometry/: bounding_box.rs  matrix.rs  mod.rs  normal.rs  plane.rs  vector.rs
rust_lvr2/src/io/: mod.rs  ply.rs  pts.rs
rust_lvr2/src/reconstruction/: hash_grid.rs  marching_cubes.rs  mod.rs  normals.rs  search_tree.rs
rust_lvr2/src/types/: channel.rs  mesh_buffer.rs  mod.rs  point_buffer.rs
rust_lvr2/src/util/: mod.rs  progress.rs  timing.rs
src/liblvr2/: CMakeLists.txt
src/tools/lvr2_bvh_benchmark/: CMakeLists.txt  Main.cpp
src/tools/lvr2_hdf5_mesh_tool/: HDF5MeshTool.cpp
