[package]
name = "lvr2"
version = "0.1.0"
edition = "2021"
authors = ["LVR2 Team"]
description = "Las Vegas Reconstruction 2 - Surface reconstruction from point clouds"
license = "BSD-3-Clause"
repository = "https://github.com/uos/lvr2"
keywords = ["3d", "mesh", "point-cloud", "reconstruction", "surface"]
categories = ["graphics", "science", "algorithms"]

[dependencies]
# Linear algebra
nalgebra = "0.32"
# Nearest neighbor search
kiddo = "4.2"
# Parallel processing
rayon = "1.8"
# Error handling
thiserror = "1.0"
# PLY file format
ply-rs = "0.1"
# Command line parsing
clap = { version = "4.4", features = ["derive"] }
# Logging
log = "0.4"
env_logger = "0.10"
# Serialization
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "lvr2"
path = "src/lib.rs"

[[bin]]
name = "lvr2_reconstruct"
path = "src/bin/reconstruct.rs"

[profile.release]
opt-level = 3
lto = true
